title alignment fix

--- a/src/features/Profile/Title.module.css
+++ b/src/features/Profile/Title.module.css
@@ -1,5 +1,6 @@
 .wrap {
-  display: grid;
+  position: relative;
+  margin-top: 13px;
 }
 
 .title, .stretch {
@@ -12,7 +13,6 @@
   padding: 0 0 6px 0;
   box-sizing: border-box;
   width: calc(100% - 15px);
-  margin-top: 6px;
   grid-area: 1 / 1 / 2 / 2;
   border-bottom: 1px solid transparent;
 }
@@ -20,6 +20,9 @@
 .title {
   resize: none;
   overflow: hidden;
+  position: absolute;
+  top: 0;
+  height: 100%;
 }
 
 .title:focus {
